# everest

./: .bazelrc  .gitignore  .rubocop.yml  BUILD.bazel  Cargo.toml  Gemfile  MODULE.bazel  Pipfile  README.md  TODO.md  WORKSPACE  deps.bzl  go.mod  go.sum  maven_install.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json5  run.sh
.github/workflows/: codeql-analysis.yml  workflow.yml
docs/: language-support.md
docs/projects/: README.md
examples/cpp/hello_world/: BUILD.bazel  hello_world.cc
examples/go/hello_world/: BUILD.bazel  hello_world.go
examples/java/hello_world/: BUILD.bazel
examples/objc/hello_world/: BUILD.bazel
examples/objc/hello_world/Sources/: hello_world.m
examples/objc/hello_world/Sources/Hello/: BUILD.bazel  hello.h  hello.m
examples/python/hello_world/: BUILD.bazel  hello_world.py
examples/rust/hello_world/: BUILD.bazel  Cargo.toml  crates.bzl
examples/rust/hello_world/remote/: ansi_term-0.11.0.BUILD  atty-0.2.13.BUILD  bitflags-1.2.1.BUILD  clap-2.33.0.BUILD  libc-0.2.66.BUILD  strsim-0.8.0.BUILD  textwrap-0.11.0.BUILD  unicode-width-0.1.6.BUILD  vec_map-0.8.1.BUILD  winapi-0.3.8.BUILD  winapi-i686-pc-windows-gnu-0.4.0.BUILD  winapi-x86_64-pc-windows-gnu-0.4.0.BUILD
examples/swift/hello_world/: BUILD.bazel  HelloWorld.swift  HelloWorldFromObjc.swift
src/bash/hello_world/: BUILD.bazel  hello_world.sh
src/cobol/hello-world/: compile.sh  main.cbl
src/cpp/hello_world/: BUILD.bazel  hello_world.cc
src/cpp/hello_world/greet/: BUILD.bazel  greet.cc  greet.h  greet_test.cc
src/cpp/hello_world/server/: BUILD.bazel  server.cc  server_test.go
src/cpp/luhn/: BUILD.bazel  luhn.h  luhn_test.cc
src/cpp/math/: BUILD.bazel  README.md  math.c
src/cpp/stdlib/: BUILD.bazel  README.md  headers.csv
src/cue/foo/: BUILD.bazel  foo.cue  foo_export.cue  foo_test.go
src/echo_client/: BUILD.bazel  EchoClient.java
src/echo_client/transmission_object/: BUILD.bazel  TransmissionObject.java
src/echo_server/: BUILD.bazel  echo_server.go
src/echo_server/transmission_object/: BUILD.bazel
src/feedly/: BUILD.bazel  README.md
src/fortran/: fortran.bzl
src/fortran/hello-world/: compile.sh  main.f90
src/go/bazel/: BUILD.bazel  http.go  http_test.go  workspace.go  workspace_test.go
src/go/bazel_use/: BUILD.bazel  bazel_use.go  bazel_use_test.go
src/go/bookstore/: BUILD.bazel  README.md  service.go  service_test.go  storage.go
src/go/bookstore/cmd/client/: BUILD.bazel  client.go
src/go/bookstore/cmd/server/: BUILD.bazel  README.md  server.go  server_test.go
src/go/bookstore/storage/: BUILD.bazel  storage.go
src/go/bookstore/storage/memory/: BUILD.bazel  memory.go
src/go/bookstore/storage/sql/: BUILD.bazel  sql.go  sql_test.go
src/go/cel/: BUILD.bazel  cel_test.go
src/go/cpp/: BUILD.bazel  cpp.go  cpp_test.go  headers.go  headers_test.go
src/go/echo/: BUILD.bazel  README.md  deployment.yaml  echo_e2e_test.go  echo_server.go  ingress.yaml  service.yaml
src/go/echo/client/: BUILD.bazel
src/go/echo/server/: BUILD.bazel  deployment.yaml  server.go
src/go/echo/server/transmission_object/: BUILD.bazel  transmission_object.go
src/go/feedly/: BUILD.bazel  README.md  api.go  feedly.go  feedly_darwin.go  feedly_windows.go
src/go/fiximport/: BUILD.bazel  fiximport.go
src/go/gh-release-to-bzl/: BUILD.bazel  main.go
src/go/git-clone/: BUILD.bazel  README.md  git-clone.go
src/go/hello_world/: BUILD.bazel
src/go/histdb/: README.md
src/go/logging/: BUILD.bazel  logging.go
src/go/luhn/: BUILD.bazel  luhn.go  luhn_test.go
src/go/monitor/: BUILD.bazel  main.go  main_test.go
src/haskell/hello_world/: BUILD.bazel  hello_world.hs
src/haskell/helloworld/: BUILD.bazel
src/haskell/luhn/: BUILD.bazel
src/java/cel/: BUILD.bazel  Cel.java  CelTest.java
src/java/hello_world/: BUILD.bazel  HelloWorld.java  HelloWorldTest.java
src/java/luhn/: BUILD.bazel  LuhnAlgorithm.java  LuhnAlgorithmTest.java
src/java/math/: BUILD.bazel  NativeMath.java  NativeMathTest.java  README.md
src/js/hello_world/: BUILD.bazel  hello_world.js
src/js/helloworld/: BUILD.bazel
src/kotlin/hello_world/: App.kt  BUILD.bazel
src/kotlin/helloworld/: App.kt  BUILD.bazel
src/kotlin/luhn/: BUILD.bazel  Luhn.kt  LuhnTest.kt
src/objc/hello_world/: BUILD.bazel  main.m
src/parsers/morsecode/: BUILD.bazel
src/proto/: BUILD.bazel
src/rust/: BUILD.bazel
src/rust/cel/: BUILD.bazel  Cargo.toml
src/rust/cel/src/: main.rs
src/rust/grpc_server/: BUILD.bazel  Cargo.toml
src/rust/grpc_server/src/: main.rs
src/rust/hello_world/: BUILD.bazel  Cargo.toml  README.md  crates.bzl  hello_world.rs
src/rust/hello_world/cargo/: BUILD.bazel
src/rust/hello_world/remote/: ansi_term-0.11.0.BUILD  atty-0.2.13.BUILD  bitflags-1.2.1.BUILD  clap-2.33.0.BUILD  libc-0.2.66.BUILD  strsim-0.8.0.BUILD  textwrap-0.11.0.BUILD  unicode-width-0.1.6.BUILD  vec_map-0.8.1.BUILD  winapi-0.3.8.BUILD  winapi-i686-pc-windows-gnu-0.4.0.BUILD  winapi-x86_64-pc-windows-gnu-0.4.0.BUILD
src/rust/hello_world/src/: main.rs
src/rust/luhn/: BUILD.bazel  Cargo.toml
src/rust/luhn/src/: lib.rs
src/rust/num/: BUILD.bazel  Cargo.toml  README.md
src/rust/num/cargo/: BUILD.bazel
src/rust/num/src/: lib.rs
src/rust/petstore/client/: BUILD.bazel
src/rust/petstore/server/: BUILD.bazel
src/rust/web/: BUILD.bazel  Cargo.toml
src/rust/web/cargo/: BUILD.bazel
src/rust/web/src/: main.rs
src/rust/web/templates/: hello.html
tools/: BUILD.bazel  format.sh  sync-dependencies.sh  tools.go  update-dependencies.sh  update-deps.sh
tools/autoflake/: BUILD.bazel
tools/black/: BUILD.bazel
tools/ci/: bazel.rc  build.sh  install_bazelisk.sh  pr.sh  test.sh
tools/google-java-format/: BUILD.bazel
tools/isort/: BUILD.bazel
tools/jq/: jq.BUILD.bazel
tools/nogo/: BUILD.bazel  config.json  nogo.go
tools/pipenv/: BUILD.bazel
tools/python/: BUILD.bazel  pipefile_lock_to_bzl.py  requirements.txt  update-deps.sh
tools/target-determinator/: BUILD.bazel  gen.py  td.bzl
tools/uncrustify/: BUILD.bazel  uncrustify.cfg
tools/yapf/: BUILD.bazel
(+141 files in other folders)
