load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    lint_warnings = ["all"],
)

# gazelle:go_proto_compilers @rules_go//proto:go_proto
# gazelle:go_grpc_compilers @rules_go//proto:go_grpc_v2

# gazelle:resolve cc gflags/gflags.h @gflags
# gazelle:resolve cc gtest/gtest.h @googletest//:gtest_main

# gazelle:resolve proto proto google/api/field_behavior.proto @googleapis//google/api:field_behavior_proto
# gazelle:resolve proto go google/api/field_behavior.proto @org_golang_google_genproto_googleapis_api//annotations

# gazelle:go_grpc_compilers @rules_go//proto:go_grpc

gazelle(
    name = "gazelle",
    external = "static",
    gazelle = ":gazelle_bin",
    mode = "fix",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@gazelle//language/proto",
        "@gazelle_cc//language/cc",
        "@gazelle//language/go",
    ],
)
