[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "everest"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
autoflake = "^2.3.1"
black = "^24.4.2"
cel-python = "^0.1.5"
isort = "^5.13.2"
jinja2 = "^3.1.6"
python = "^3.12"
