load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["echo_server.go"],
    importpath = "github.com/satreix/everest/src/echo_server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "echo_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
