package(default_visibility = ["//visibility:public"])

load("//tools/python/entrypoint:def.bzl", "py_entrypoint")
load("@pypi//:requirements.bzl", "requirement")

# Naming the entry point not the package name to avoid name shadowing:
# http://python-notes.curiousefficiency.org/en/latest/python_concepts/import_traps.html#the-name-shadowing-trap

py_entrypoint(
    name = "autoflake",
    function = "main",
    package = "autoflake",
    deps = [
        requirement("autoflake"),
        requirement("pyflakes"),
    ],
)
