load("@rules_rust//rust:rust.bzl", "rust_binary")

alias(
    name = "clap",
    actual = "@raze__clap__2_33_0//:clap",
)

rust_binary(
    name = "hello_world",
    srcs = ["hello_world.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "clap",
    ],
)

load("//tools/test/binary:binary.bzl", "binary_test")

binary_test(
    name = "hello_world_test",
    binary = ":hello_world",
)
