[package]
name = "hello_world"
version = "0.1.0"
authors = ["satreix <satreix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[[bin]]
name = "hello_world"
path = "hello_world.rs"

[raze]
workspace_path = "//examples/rust/hello_world"
genmode = "Remote"
