load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")
load("//tools/test/binary:binary.bzl", "binary_test")

# TODO(sb) setup SwiftPM

swift_binary(
    name = "hello_world",
    srcs = ["HelloWorld.swift"],
    visibility = ["//visibility:public"],
)

swift_binary(
    name = "hello_world_from_objc",
    srcs = ["HelloWorldFromObjc.swift"],
    visibility = ["//visibility:public"],
    deps = ["//examples/objc/hello_world/Sources/Hello"],
)

binary_test(
    name = "hello_world_from_objc_test",
    binary = ":hello_world_from_objc",
    opt_style = "short",
)

binary_test(
    name = "hello_world_test",
    binary = ":hello_world",
    opt_style = "short",
)
