load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "luhn",
    srcs = ["luhn.cc"],
    hdrs = ["luhn.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "luhn_test",
    size = "small",
    srcs = ["luhn_test.cc"],
    deps = [
        ":luhn",
        "@googletest//:gtest_main",
    ],
)
