load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

cue_library(
    name = "foo",
    srcs = ["foo.cue"],
    importpath = "github.com/satreix/everest/src/cue:foo",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "foo_export",
    src = "foo_export.cue",
    visibility = ["//visibility:public"],
    deps = [":foo"],
)

go_test(
    name = "foo_test",
    srcs = ["foo_test.go"],
    data = [":foo_export"],
)
