load("@rules_cue//cue:cue.bzl", "cue_exported_standalone_files")
load("@rules_go//go:def.bzl", "go_test")

cue_exported_standalone_files(
    name = "foo",
    srcs = ["foo.cue"],
    #importpath = "github.com/satreix/everest/src/cue:foo",
    visibility = ["//visibility:public"],
)

go_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.go"],
    data = [":foo"],
)
